--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=13e4c715af6ef43fbc797ef9f18e6eec
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-  DATABASE_URL="mysql://weisgerber:Tarwacki07@@127.0.0.1:3306/db_name?serverVersion=5.7"
+  DATABASE_URL="mysql://db_user:db_pasword@127.0.0.1:3306/db_name?serverVersion=5.7"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
